Change ionic from standalone to ngmodules

--- a/app-inatel/src/app/tab2/tab2.page.html
+++ b/app-inatel/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Calendário
+      Tab 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
