--- a/app-inatel/src/app/tab1/tab1.page.html
+++ b/app-inatel/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Perfil
+      Tab 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
