Priffile, events, home + mindcare working

--- a/app-inatel/src/app/tab4/tab4.page.html
+++ b/app-inatel/src/app/tab4/tab4.page.html
@@ -1,17 +1,86 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 4
-    </ion-title>
+    <ion-text color="inatel" class="ion-text-center">
+      <h1>Mind++ Lab</h1>
+    </ion-text>
+      
+    <ion-segment value="networking" (ionChange)="segmentChangedMind($event)">
+      <ion-segment-button value="networking"  >
+        <ion-label>networking</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="mind-care" >
+        <ion-label>mind care</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 4</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 4 page"></app-explore-container>
+<ion-content [fullscreen]="true" *ngIf="selectedSegmentMind == 'networking'">
+  <ion-card>
+    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <ion-card-header>
+      <ion-card-title>Post 1</ion-card-title>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <ion-card-header>
+      <ion-card-title>Post 2</ion-card-title>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
+<ion-content [fullscreen]="true" *ngIf="selectedSegmentMind == 'mind-care'">
+  <div class="mind-consulta-button">
+    <ion-button color="inatel" expand="block">
+      <ion-icon slot="start" name="add" color="inatel"></ion-icon>
+      Agendar consulta
+    </ion-button>
+  </div>
+  <ion-list [inset]="true">
+    <ion-list-header>
+      <strong>Próximas consultas</strong>
+    </ion-list-header>
+    <ion-item-sliding>
+      <ion-item [button]="true">
+        <ion-label>
+          <h3>Consulta 1</h3>
+          <p>01/06/2024</p>
+          <p>15:00</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+
+    <ion-item-sliding>
+      <ion-item [button]="true">
+        <ion-label>
+          <h3>Consulta 2</h3>
+          <p>11/07/2024</p>
+          <p>15:00</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
