--- a/app-inatel/src/global.scss
+++ b/app-inatel/src/global.scss
@@ -35,3 +35,17 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+.logo-inatel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.mind-consulta-button {
+    margin-top: 20px;
+    margin-bottom: 8px;
+}
