--- a/app-inatel/src/app/tab1/tab1.page.html
+++ b/app-inatel/src/app/tab1/tab1.page.html
@@ -1,17 +1,42 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <div class="logo-inatel">
+      <ng-container>
+        <a routerLink="/"><img src="..\..\assets\Inatel.png" height="40" ></a>
+      </ng-container>
+    </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item class="profile-card">
+    <ion-avatar class="profile-photo">
+      <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    </ion-avatar>
+    <ion-label >
+      <ion-text color="primary" class="ion-text-wrap" style="font-size: 1rem;">
+        {{user.name}}
+      </ion-text><br>
+      <ion-note color="medium" class="ion-text-wrap" >{{user.email}}<br>{{user.phone}}</ion-note>
+    </ion-label>
+  </ion-item>
+  <ion-list lines="inset">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-item>
+      <ion-label>Nome:</ion-label>
+      <ion-text color="medium" >{{user.name}}</ion-text>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Email:</ion-label>
+      <ion-text color="medium" >{{user.email}}</ion-text>
+    </ion-item>
+
+    <ion-item button detail="true">
+
+      <ion-label>Menu 1</ion-label>
+
+    </ion-item>
+
+  </ion-list>
 </ion-content>
