--- a/app-inatel/src/app/tab2/tab2.page.html
+++ b/app-inatel/src/app/tab2/tab2.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <div class="logo-inatel">
+      <ng-container>
+        <a routerLink="/"><img src="..\..\assets\Inatel.png" height="40" ></a>
+      </ng-container>
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Awesome Event</ion-card-subtitle>
+      <ion-card-title>Awesome Event</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Awesome content
+    </ion-card-content>
+  </ion-card>
+  
 </ion-content>
