--- a/app-inatel/src/app/tab3/tab3.page.html
+++ b/app-inatel/src/app/tab3/tab3.page.html
@@ -1,17 +1,108 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <div class="logo-inatel">
+      <ng-container>
+        <a routerLink="/"><img src="..\..\assets\Inatel.png" height="40" ></a>
+      </ng-container>
+    </div>
+    <ion-segment value="hoje" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="hoje"  >
+        <ion-label>hoje</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="esta-semana" >
+        <ion-label>esta semana</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+
+<ion-content [fullscreen]="true" *ngIf="selectedSegment == 'hoje'">
+  <ion-card  *ngFor="let aula of nextDaily">
+    <ion-card-header>
+      <ion-card-subtitle *ngIf="aula.isLab == true">{{aula.id}} - L{{aula.labId}}</ion-card-subtitle>
+      <ion-card-subtitle *ngIf="aula.isLab == false">{{aula.id}}</ion-card-subtitle>
+      <ion-card-title>{{aula.titulo}}</ion-card-title>
+      
+    </ion-card-header>
+    <ion-card-content>
+        <ion-list>
+          <ion-item>
+            <ion-label>Horário</ion-label>
+            <ion-text color="primary">
+              <p>{{aula.hora}}</p>
+            </ion-text>
+          </ion-item>
+          <ion-item>
+            <ion-label>Local</ion-label>
+            <ion-text color="primary">
+              <p>{{aula.local}}</p>
+            </ion-text>
+          </ion-item>
+        </ion-list>
+        <ion-button expand="block" (click)="setOpen(true, aula)">Detalhes</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
+
+<ion-content [fullscreen]="true" *ngIf="selectedSegment == 'esta-semana'">
+
+  <ion-list *ngFor="let weekDay of nextWeekly">
+    <ion-list-header class="ion-text-center">
+      <strong>{{weekDay.dia}} - {{weekDay.data}}</strong>
+      
+    </ion-list-header>
+    <ion-list *ngFor="let aula of weekDay.aulas">
+        <ion-item lines="inset" (click)="setOpen(true, aula)" detail="true">
+          <ion-label>
+            <h3 *ngIf="aula.isLab == true">{{aula.id}} - L{{aula.labId}} - {{aula.titulo}}</h3>
+            <h3 *ngIf="aula.isLab == false">{{aula.id}} - {{aula.titulo}}</h3>
+            <p>{{aula.hora}}</p>
+            <p>{{aula.local}}</p>
+          </ion-label>
+        </ion-item>
+    </ion-list>
+
+  </ion-list>
+
+</ion-content>
+
+<ion-modal [isOpen]="isModalOpen">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>{{detalhe.id}}</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="setOpen(false, false)">Fechar</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
+        <ion-item detail="true">
+          <ion-label>
+            <h3>Faltas</h3>
+            <p>{{detalhe.faltas}}/{{detalhe.faltasMax}}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item detail="true">
+          <ion-label>
+            <h3>Notas</h3>
+            <p>N1: {{detalhe.n1}}</p>
+            <p>N2: {{detalhe.n2}}</p>
+            <p>Nota Final: {{detalhe.nf}}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>
+            <h3>Ementa</h3>
+            <p>Aqui vai a ementa da matéria</p>
+          </ion-label>
+        </ion-item>
+
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-modal>
