--- a/app-inatel/src/app/tab1/tab1.page.html
+++ b/app-inatel/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
       <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
     </ion-avatar>
     <ion-label >
-      <ion-text color="primary" class="ion-text-wrap" style="font-size: 1rem;">
+      <ion-text color="inatel" class="ion-text-wrap" style="font-size: 1rem;">
         {{user.name}}
       </ion-text><br>
       <ion-note color="medium" class="ion-text-wrap" >{{user.email}}<br>{{user.phone}}</ion-note>
