--- a/app-inatel/src/app/tab1/tab1.page.html
+++ b/app-inatel/src/app/tab1/tab1.page.html
@@ -32,11 +32,20 @@
       <ion-text color="medium" >{{user.email}}</ion-text>
     </ion-item>
 
-    <ion-item button detail="true">
+    <ion-item button detail="true" (click)="setOpen(true)">
 
-      <ion-label>Menu 1</ion-label>
+        <ion-label>Financeiro</ion-label>
+        <ion-icon name="card-outline" slot="start" aria-hidden="true"></ion-icon>
 
     </ion-item>
 
   </ion-list>
 </ion-content>
+
+<ion-alert
+  [isOpen]="isAlertOpen"
+  header="Tesouraria INATEL"
+  message="Você não possui pendências com o Financeiro."
+  [buttons]="alertButtons"
+  (didDismiss)="setOpen(false)"
+></ion-alert>
