--- a/app-inatel/src/app/tabs/tabs.page.html
+++ b/app-inatel/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon name="calendar-clear"></ion-icon>
+      <ion-icon name="book"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
@@ -18,7 +18,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab5" href="/tabs/tab5">
-      <ion-icon name="settings"></ion-icon>
+      <ion-icon name="notifications"></ion-icon>
     </ion-tab-button>
   
   
