--- a/app-inatel/src/app/tab2/tab2.page.html
+++ b/app-inatel/src/app/tab2/tab2.page.html
@@ -10,7 +10,7 @@
 
 <ion-content>
   <ion-item>
-    <h3>Matricula</h3>
+    <h3>Matrícula</h3>
   </ion-item>
   <ion-list>
     <ion-item button *ngFor="let materia of materiasMatriculadas" detail="true" (click)="setOpen(true, materia)">
