--- a/app-inatel/src/app/tab4/tab4.page.html
+++ b/app-inatel/src/app/tab4/tab4.page.html
@@ -73,7 +73,7 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <ion-title>Angendar Consulta</ion-title>
+        <ion-title>Agendar Consulta</ion-title>
         <ion-buttons slot="end">
           <ion-button (click)="setOpen(false)">Fechar</ion-button>
         </ion-buttons>
