Add real weekday mocks + fix styles

--- a/app-inatel/src/app/tab4/tab4.page.html
+++ b/app-inatel/src/app/tab4/tab4.page.html
@@ -17,32 +17,32 @@
 
 <ion-content [fullscreen]="true" *ngIf="selectedSegmentMind == 'networking'">
   <ion-card>
-    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <img alt="Fabrica de talentos" src="https://images.sympla.com.br/64e8afb9a216d-lg.jpg" />
     <ion-card-header>
-      <ion-card-title>Post 1</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Participe da fábrica de talentos 2024!</ion-card-title>
+      <ion-card-subtitle>Inscrições de 11 de junho a 12 de julho</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Participe da fábrica de talentos 2024! Inscrições de 11 de junho a 12 de julho. Acesse o site e saiba mais.
     </ion-card-content>
   </ion-card>
   <ion-card>
-    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <img alt="Silhouette of mountains" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/webinar-event-social-media-template-design-fb1b7918c439167871071879a784e601_screen.jpg" />
     <ion-card-header>
-      <ion-card-title>Post 2</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Webinar</ion-card-title>
+      <ion-card-subtitle>Programa Pan-Americano de Formação Prática</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Participe do webinar Programa Pan-Americano de Formação Prática. Acesse o site e saiba mais.
     </ion-card-content>
   </ion-card>
 </ion-content>
 
 <ion-content [fullscreen]="true" *ngIf="selectedSegmentMind == 'mind-care'">
   <div class="mind-consulta-button">
-    <ion-button color="inatel" expand="block" (click)="setOpen(true)">
+    <ion-button color="inatel" expand="block"  (click)="setOpen(true)">
       <ion-icon slot="start" name="add" color="inatel"></ion-icon>
       Agendar consulta
     </ion-button>
