--- a/app-inatel/src/app/tab5/tab5.page.html
+++ b/app-inatel/src/app/tab5/tab5.page.html
@@ -14,12 +14,11 @@
   </ion-item>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>Dia 7 de Maio</ion-card-subtitle>
-      <ion-card-title>Aula Magna - INATEL</ion-card-title>
+      <ion-card-subtitle>Dia 28 de junho de 2024</ion-card-subtitle>
+      <ion-card-title>Entrega dos comprovantes de atividade externa</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <h2>Teatro INATEL</h2>
-      <p>19:30</p>
+      <p>Não esqueça de enviar os comprovantes para rosilene&#64;inatel.br</p>
     </ion-card-content>
   </ion-card>
   
